# cpla

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  CMakeLists.txt  README.md  pandoc_meta.yaml  w11_ex02_pimpl_unicorn_tests.xml
lib/: CMakeLists.txt
lib/CUTE/cute/: cute_runner.h  cute_suite.h  cute_test.h  summary_listener.h  xml_listener.h
lib/simple_http/: CMakeLists.txt
lib/simple_http/include/: simple_http.hpp
lib/simple_http/src/: disposition.cpp  header.cpp  message.cpp  method.cpp  mime_type.cpp  request.cpp  response.cpp  status_code.cpp
week01/: CMakeLists.txt  README.md
week01/exercise solutions/w01_solution_01_simple_tasks/: .cproject
week01/exercise solutions/w01_solution_02_fraction_type/: .cproject
week01/exercise_solutions/01_simple_tasks/: CMakeLists.txt
week01/exercise_solutions/02_fraction_type/: CMakeLists.txt
week01/exercise_solutions/03_dynarray/: CMakeLists.txt
week01/exercise_solutions/w01_solution_03_dynarray/: .cproject  .gitignore  .project
week01/exercise_templates/01_simple_tasks/: CMakeLists.txt
week01/exercise_templates/02_fraction_type/: CMakeLists.txt
week01/exercise_templates/03_dynarray/: CMakeLists.txt
week01/lecture examples/w01_lecture_00_StylecheckerDemo/: .project
week01/lecture examples/w01_lecture_01_IssuesInCevelop/: .cproject
week01/lecture examples/w01_lecture_03_Algorithms/: .cproject  .project
week01/lecture_examples/01_integral_promotion/: CMakeLists.txt  IntegralPromotion.cpp
week01/lecture_examples/02_algorithms/: Algorithms.cpp  CMakeLists.txt
week01/lecture_examples/w01_lecture_00_StylecheckerDemo/: .cproject
week01/lecture_examples/w01_lecture_02_IntegralPromotion/: .project  integral_promotion.cpp
week02/: CMakeLists.txt  README.md
week02/exercise solutions/w02_solution_02_DirectorySizer/: .project
week02/exercise_solution/: README.md
week02/exercise_templates/01_tracer/: CMakeLists.txt  Tracer.hpp  TracerMain.cpp
week02/exercise_templates/02_bounded_buffer/: CMakeLists.txt
week02/exercise_templates/w02_template_01_DynArray/: .project
week02/exercise_templates/w02_template_01_Tracer/: .project  Main.cpp
week02/exercise_templates/w02_template_02_BoundedBuffer/: .cproject  .project
week02/lecture examples/w01_lecture_01_static_assert/: .project
week02/lecture examples/w01_lecture_03_anyDemo/: .project
week02/lecture examples/w01_lecture_04_variant/: .project
week02/lecture examples/w01_lecture_05_optional/: .gitignore
week02/lecture examples/w01_lecture_08_DeductionGuides/: .project
week02/lecture examples/w01_lecture_10_string_view/: .cproject  .project
week02/lecture_examples/: .project
week02/lecture_examples/01_copy_demo/: CMakeLists.txt  CopyDemo.cpp
week02/lecture_examples/02_move_demo/: CMakeLists.txt  MoveDemo.cpp
week02/lecture_examples/03_planets_example/: CMakeLists.txt  Planet.hpp  PlanetsExample.cpp
week02/lecture_examples/04_temporary_materialization/: CMakeLists.txt  TemporaryMaterialization.cpp
week02/lecture_examples/05_overload_resolution/: CMakeLists.txt  OverloadResolution.cpp
week02/lecture_examples/06_overload_resolution_member_functions/: CMakeLists.txt  OverloadResolutionMemberFunctions.cpp
week02/lecture_examples/07_copy_and_move_constructors/: CMakeLists.txt  CopyAndMoveConstructors.cpp
week02/lecture_examples/08_copy_and_move_assignment/: CMakeLists.txt  CopyAndMoveAssignment.cpp
week02/lecture_examples/09_mandatory_elision/: CMakeLists.txt  MandatoryElision.cpp
week02/lecture_examples/10_copy_elision/: CMakeLists.txt  CopyElision.cpp
week02/lecture_examples/11_copy_elision_exceptions/: CMakeLists.txt  CopyElisionExceptions.cpp
week02/lecture_examples/12_copy_elision_and_std_move/: CMakeLists.txt  CopyElisionAndStdMove.cpp
week02/lecture_examples/13_lifetime_extension/: CMakeLists.txt  LifetimeExtension.cpp
week02/lecture_examples/w01_lecture_02_AutoSpecifier/: .cproject
week02/lecture_examples/w01_lecture_03_any/: .cproject  .project
week02/lecture_examples/w01_lecture_03_anyDemo/: any.cpp
week02/lecture_examples/w01_lecture_04_variant/: variant.cpp
week02/lecture_examples/w01_lecture_04_variantDemo/: .project
week02/lecture_examples/w01_lecture_06_filesystem/: .project
week02/lecture_examples/w01_lecture_08_DeductionGuides/: deduction_guide.cpp
week02/lecture_examples/w01_lecture_09_StructuredBindings/: .project
week02/lecture_examples/w02_lecture_00_CopyDemo/: .cproject  .project
week02/lecture_examples/w02_lecture_01_MoveDemo/: .cproject  .project
week02/lecture_examples/w02_lecture_02_PlanetsExample/: .cproject  .project  Planet.h  main.cpp
week02/lecture_examples/w02_lecture_03_TemporaryMaterialization/: .cproject  .project
week02/lecture_examples/w02_lecture_04_OverloadResolution/: .cproject  .project
week02/lecture_examples/w02_lecture_05_OverloadResolutionMemberFunctions/: .cproject  .project
week02/lecture_examples/w02_lecture_06_CopyAndMoveConstructors/: .cproject  .project
week02/lecture_examples/w02_lecture_07_CopyAndMoveAssignment/: .cproject  .project
week02/lecture_examples/w02_lecture_08_MandatoryElision/: .cproject  .project
week02/lecture_examples/w02_lecture_09_CopyElision/: .cproject  .project
week02/lecture_examples/w02_lecture_10_CopyElisionExceptions/: .cproject  .project
week02/lecture_examples/w02_lecture_11_CopyElisionAndStdMove/: .cproject  .project  CopyElisionAndStdMove.cpp
week03/: CMakeLists.txt  README.md
week03/exercise_solution/: README.md
week04/: CMakeLists.txt  README.md
week05/: CMakeLists.txt  README.md  SOLUTION.md
week06/: CMakeLists.txt  README.md
week06/lecture_examples/: .project
week07/: CMakeLists.txt  README.md
week08/: CMakeLists.txt  README.md
week08/exercise_templates/: README.md
week09/: CMakeLists.txt  README.md
week10/: CMakeLists.txt  README.md  test.patch
week10/exercise_templates/: .cproject  .project
week11/: CMakeLists.txt  README.md
week11/exercise_solution/: README.md
week12/: CMakeLists.txt  README.md
week12/exercise_solution/: README.md
(+1356 files in other folders)
