set(CPL_TARGET_WEEK_PREFIX "w01_")

add_subdirectory("lecture_examples/01_integral_promotion")
add_subdirectory("lecture_examples/02_algorithms")

add_subdirectory("exercise_solutions/01_simple_tasks")
add_subdirectory("exercise_solutions/02_fraction_type")
add_subdirectory("exercise_solutions/03_dynarray")

