set(CPL_TARGET_WEEK_PREFIX "w02_")

add_subdirectory("lecture_examples/01_copy_demo")
add_subdirectory("lecture_examples/02_move_demo")
add_subdirectory("lecture_examples/03_planets_example")
add_subdirectory("lecture_examples/04_temporary_materialization")
add_subdirectory("lecture_examples/05_overload_resolution")
add_subdirectory("lecture_examples/06_overload_resolution_member_functions")
add_subdirectory("lecture_examples/07_copy_and_move_constructors")
add_subdirectory("lecture_examples/08_copy_and_move_assignment")
add_subdirectory("lecture_examples/09_mandatory_elision")
add_subdirectory("lecture_examples/10_copy_elision")
add_subdirectory("lecture_examples/11_copy_elision_exceptions")
add_subdirectory("lecture_examples/12_copy_elision_and_std_move")
add_subdirectory("lecture_examples/13_lifetime_extension")

add_subdirectory("exercise_templates/01_tracer")
add_subdirectory("exercise_templates/02_bounded_buffer")
