set(CPL_TARGET_WEEK_PREFIX "w03_")

add_subdirectory("lecture_examples/01_big_object_container")
add_subdirectory("lecture_examples/02_initializer_list_as_template_argument")
add_subdirectory("lecture_examples/03_auto_return_type")
add_subdirectory("lecture_examples/04_do_something_by_value")
add_subdirectory("lecture_examples/05_do_something_by_ref")
add_subdirectory("lecture_examples/06_do_something_by_const_ref")
add_subdirectory("lecture_examples/07_do_something_by_fwd_ref")
add_subdirectory("lecture_examples/08_do_something_by_perfect_forwarding")
add_subdirectory("lecture_examples/09_fun_with_lambdas")

add_subdirectory("exercise_templates/02_type_trivia")
add_subdirectory("exercise_templates/03_bounded_buffer_with_factory_function")

