set(CPL_TARGET_WEEK_PREFIX "w04_")

add_subdirectory("lecture_examples/01_max_array_size_on_stack")
add_subdirectory("lecture_examples/02_nullptr_vs_null")
add_subdirectory("lecture_examples/03_new_examples")
add_subdirectory("lecture_examples/04_placement_new")
add_subdirectory("lecture_examples/05_placement_delete")
add_subdirectory("lecture_examples/06_non_default_constructible_point")
add_subdirectory("lecture_examples/07_new_delete_overload")
add_subdirectory("lecture_examples/08_emplace")

add_subdirectory("self_study/01_value_holder")
add_subdirectory("self_study/02_better_value_holder")

add_subdirectory("exercise_templates/01_not_on_heap")
add_subdirectory("exercise_templates/02_bounded_buffer_with_heap_memory")
add_subdirectory("exercise_templates/03_bounded_buffer_for_non_default_constructible_types")

add_subdirectory("exercise_solutions/01_not_on_heap")

