set(CPL_TARGET_WEEK_PREFIX "w05_")

add_subdirectory("lecture_examples/01_space_travel")
add_subdirectory("lecture_examples/02_int_iterator")
add_subdirectory("lecture_examples/03_tag_dispatching")
add_subdirectory("lecture_examples/04_boost_iterator")
add_subdirectory("lecture_examples/05_int_iterator_boost")
add_subdirectory("lecture_examples/06_output_iterator")
add_subdirectory("lecture_examples/07_summing_iterator")
add_subdirectory("lecture_examples/08_int_inputter")
add_subdirectory("lecture_examples/09_int_inputter_with_pointers")

add_subdirectory("exercise_templates/01_bounded_buffer_with_iterators")
add_subdirectory("exercise_templates/03_fibonacci_iterator")

add_subdirectory("exercise_solutions/02_lcount_with_iterator")
add_subdirectory("exercise_solutions/03_fibonacci_iterator")


