set(CPL_TARGET_WEEK_PREFIX "w06_")

add_subdirectory("lecture_examples/01_shape_and_square")
add_subdirectory("lecture_examples/02_extract_middle")
add_subdirectory("lecture_examples/03_extract_middle")
add_subdirectory("lecture_examples/04_overload_selection")
add_subdirectory("lecture_examples/05_substitution_error")
add_subdirectory("lecture_examples/06_SFINAE_with_enable_if")
add_subdirectory("lecture_examples/07_box_with_SFINAE")
add_subdirectory("lecture_examples/08_arbitrary_printer")
add_subdirectory("lecture_examples/09_incrementable_concept")
add_subdirectory("lecture_examples/10_printable")
add_subdirectory("lecture_examples/11_printable_overloaded")

add_subdirectory("exercise_templates/02_SFINAE")

add_subdirectory("exercise_solutions/02_SFINAE")

