set(CPL_TARGET_WEEK_PREFIX "w07_")

add_subdirectory("lecture_examples/01_compile_time_function")
add_subdirectory("lecture_examples/02_compile_time_undefined_behavior")
add_subdirectory("lecture_examples/03_compile_time_invalid_branch")
add_subdirectory("lecture_examples/04_literal_type_example")
add_subdirectory("lecture_examples/05_compile_time_computation_with_class_templates")
add_subdirectory("lecture_examples/06_speed_value_with_factory_functions")
add_subdirectory("lecture_examples/07_speed_value_with_tags")
add_subdirectory("lecture_examples/08_speed_UDL")
add_subdirectory("lecture_examples/09_string_UDL")
add_subdirectory("lecture_examples/10_raw_UDL_runtime")
add_subdirectory("lecture_examples/11_compile_time_ternary")
add_subdirectory("lecture_examples/12_compile_time_reverse")
add_subdirectory("lecture_examples/13_arbitrary_printer_reiterated")
add_subdirectory("lecture_examples/14_compile_time_random")
add_subdirectory("lecture_examples/15_compile_time_maze")

add_subdirectory("exercise_templates/01_compile_time_hashing")
add_subdirectory("exercise_templates/02_compile_time_fibonacci")
add_subdirectory("exercise_templates/03_vector_literal_type")
# add_subdirectory("exercise_templates/04_temperature_type")

# add_subdirectory("exercise_solutions/02_compile_time_fibonacci")
# add_subdirectory("exercise_solutions/03_vector_literal_type")
# add_subdirectory("exercise_solutions/04_temperature_type")

