set(CPL_TARGET_WEEK_PREFIX "w08_")

add_subdirectory("lecture_examples/01_constructing_threads")
add_subdirectory("lecture_examples/02_threadable_functions")
add_subdirectory("lecture_examples/03_passing_arguments_to_threads")
add_subdirectory("lecture_examples/04_no_join_quiz")
add_subdirectory("lecture_examples/05_dangling_with_detach")
add_subdirectory("lecture_examples/06_jthread")
add_subdirectory("lecture_examples/07_knowing_your_thread")
add_subdirectory("lecture_examples/08_quiz")
add_subdirectory("lecture_examples/09_results_via_shared_state")
add_subdirectory("lecture_examples/10_results_via_promises_futures")
add_subdirectory("lecture_examples/11_std_async")
add_subdirectory("lecture_examples/12_std_async_async")

add_subdirectory("exercise_templates/00_thread_safe_queue")
add_subdirectory("exercise_templates/01_threading_basics")

add_subdirectory("exercise_solutions/01a_threading_basics")
add_subdirectory("exercise_solutions/01b_threading_basics")
