set(CPL_TARGET_WEEK_PREFIX "w11_")

add_subdirectory("lecture_examples/01_noexcept_keyword")
add_subdirectory("lecture_examples/02_explosive_liquids")
add_subdirectory("lecture_examples/03_noexcept_box")
add_subdirectory("lecture_examples/04_terminate")
add_subdirectory("lecture_examples/05_void_ptr_in_c")
add_subdirectory("lecture_examples/06_wizard_example")
add_subdirectory("lecture_examples/07_wizard_with_shared_ptr")
add_subdirectory("lecture_examples/08_wizard_with_unique_ptr")

add_subdirectory("exercise_templates/02_pimpl_unicorn")

add_subdirectory("exercise_solutions/02_pimpl_unicorn")
add_subdirectory("exercise_solutions/02_pimpl_unicorn_with_pimpl_ptr")
